# flipdot_at_ccc2023

./: .gitignore  .web.py.swo  Dockerfile  README.md  app.py  deploy.sh  drawtext.py  messages.txt  package-lock.json  package.json  pyproject.toml  util.py  web.py
.mypy_cache/3.10/: __future__.meta.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.meta.json  _decimal.data.json  _decimal.meta.json  _random.meta.json  _thread.data.json  _thread.meta.json  _warnings.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  builtins.data.json  builtins.meta.json  codecs.data.json  contextlib.data.json  contextlib.meta.json  datetime.data.json  datetime.meta.json  decimal.data.json  decimal.meta.json  enum.data.json  enum.meta.json  fractions.data.json  fractions.meta.json  functools.data.json  genericpath.data.json  genericpath.meta.json  io.data.json  itertools.data.json  itertools.meta.json  math.meta.json  mmap.data.json  mmap.meta.json  numbers.data.json  numbers.meta.json  (+31 more)
.mypy_cache/3.10/_typeshed/: __init__.data.json  __init__.meta.json
.mypy_cache/3.7/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  io.meta.json  mmap.meta.json  posix.meta.json  sys.meta.json  types.meta.json  typing.meta.json
.mypy_cache/3.7/os/: path.meta.json  (+1 more)
images/: DUCKS.txt  EMF-BOLD.txt  EXAMPLE.txt  PACMAN.txt
images/PACMAN-ANI/: 2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
js/: images.js
static/: images.css  images.js
templates/: images.html  index.html
(+234 files in other folders)
