[tool.poetry]
name = "hanover"
version = "0.1.0"
description = ""
authors = ["Russ Garrett <russ@garrett.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9"
numpy = "^1.23.5"
Pillow = "^9.3.0"
pyflipdot = "^0.2.2"
click = "^8.1.3"
flask = "^2.3.2"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
